--- a/_posts/default.html
+++ b/_posts/default.html
@@ -2,18 +2,11 @@
 <html>
 <head>
   <title>hugo hugo</title>
-  <meta charset="utf-8">
   <style type="text/css">
   a{
     color: rgb(181,181,181);
     text-decoration: none;
     margin-left: 50px;
-  }
-  a:hover{
-    color: gray;
-  }
-  h1{
-    color: rgb(181,181,181);
   }
   </style>
 </head>
@@ -29,13 +22,12 @@
   <a href="https://github.com/hugo-xie">WeiBo</a>
 </div>
 <div style="display: flex;flex-direction: row;background-color: rgb(44,60,73)">
-  <div style="width: 65%;display: flex;flex-direction: row;justify-content: center;align-items: center;" id="content1">
-    <div style="width: 80%;background-image: url(/images/intro.jpg);background-size: 100% 100%;display: flex;flex-direction: column-reverse;justify-content: flex-start;" id="content3">
-      <span style="margin:0px 0px 20px 10%;color: rgb(181,181,181);">生活不止眼前的苟且，还有诗和远方的田野</span>
-      <h2 style="color: rgb(181,181,181);margin-left: 10%">技术.感想.生活</h2>
+  <div style="width: 65%;border: 1px solid black;display: flex;flex-direction: row;justify-content: center;align-items: center;" id="content1">
+    <div style="width: 80%;border: 1px solid black;background-image: url(/images/intro.jpg);" id="content3">
+      
     </div>
   </div>
-  <div style="width: 35%;" id="content2">{{content}}</div>
+  <div style="width: 35%;border: 1px solid black" id="content2"></div>
 </div>
 <script type="text/javascript">
   var content1 = document.getElementById('content1');
